@@ -118,11 +118,7 @@ namespace Rcpp{
              * with GCC4.4 :
              * e["bla" ] = { 1,2,3};
              */
-            template <typename WRAPPABLE>
-            Binding& operator=(const WRAPPABLE& rhs){
-                env.assign( name, rhs ) ;
-                return *this ;
-            }
+            template <typename WRAPPABLE> Binding& operator=(const WRAPPABLE& rhs) ;
             
             /* rvalue */
             /**
@@ -132,11 +128,7 @@ namespace Rcpp{
              * which can either mean that a specialization exists
              * or that T has a T(SEXP) constructor
              */
-            template <typename T> 
-            operator T() const{
-                SEXP x = env.get(name) ;
-                return as<T>(x) ;
-            }
+            template <typename T> operator T() const ;
             
             
         private:
@@ -266,9 +258,7 @@ namespace Rcpp{
          * @param x wrappable object. anything that has a wrap( WRAPPABLE ) is fine
          */
         template <typename WRAPPABLE>
-        bool assign( const std::string& name, const WRAPPABLE& x) const {
-            return assign( name, wrap( x ) ) ;
-        }
+        bool assign( const std::string& name, const WRAPPABLE& x) const ;
     
         /**
          * @return true if this environment is locked
